Do not swallow exception